# blade-gaussian

./: Cargo.toml  README.md
.github/workflows/: check.yml
examples/: shader.wgsl  view.rs
src/: lib.rs  point_cloud.rs  shape.rs
src/io/: mod.rs  ply.rs  spz.rs
