[package]
name = "blade-gaussian"
version = "0.1.0"
edition = "2021"

[dependencies]
blade-graphics = { git = "https://github.com/kvark/blade", rev = "a79990e4421496f187ce172f559d7d38b287b72e" }
blade-macros = "0.3"
bytemuck = "1"
glam = { version = "0.29", features = ["mint"] }
flate2 = "1.0"
log = "0.4"
mint = "0.5"

[dev-dependencies]
env_logger = "0.11"
winit = { version = "0.30" }
